# pde-data-gen

./: .env  .gitignore  Readme.md  pyproject.toml
analysis/: .env  ball_sampling.ipynb  blowup.ipynb  gray_scott.ipynb  mvp.ipynb  new_format.ipynb  phase_transition.ipynb  point_selection.ipynb  test.ipynb  varied_points.csv
conf/: README.md  blowup.yaml  config.yaml  dataset.yaml  gray_scott_ball.yaml  gray_scott_single.yaml  param_sweep.yaml  pt.yaml
data/: blowup_rows.csv  param_sweep.csv  pt.csv  pt_larger.csv  sampling_centers.csv  varied_points.csv
scripts/: .env  README_consolidate_old.md  blowup.sh  config.py  consolidate_old_format.py  consolidate_outputs.py  eval_job.sh  inputs_job.sh  make_inputs.py  process_dataset_for_training.py  run_inputs.sh
scripts/_old_files/: new_euler_notes.txt
scripts/config_files/: cfg_dataset.py
src/: classify.py  dataset.py  dataset_manager.py  db_tools.py  setup_helpers.py
