[project]
name = "pde-data-gen"
version = "0.1.0"

description = "PDE data generation tools"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "netCDF4>=1.6.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]

[tool.setuptools]
packages = ["src"]